# UWrMaxSat

./: .gitignore  CMakeLists.txt  CadicalWrap.h  CryptoMSWrap.h  Debug.h  FEnv.h  Hardware.h  Hardware_clausify.cc  Hardware_sorters.cc  Hardware_sorters.new  Hardware_sorters.old  HashQueue.h  LICENSE  Main.cc  Main.h  Makefile  MsSolver.cc  MsSolver.h  PbParser.cc  PbParser.h  PbSolver.cc  PbSolver.h  PbSolver_convert.cc  PbSolver_convertAdd.cc  PbSolver_convertBdd.cc  PbSolver_convertSort.cc  README  README.md  SatSolver.cc  SatSolver.h  System.cc  System.h  algsatlike.h  cadical.patch  cominisatps.patch  config.cadical  config.cominisatps  config.cryptoms  config.glucose3  config.glucose4  (+5 more)
ADTs/: FEnv.h  Global.cc  Global.h  Hash_standard.h  Int.h  Map.h
